# insightboard

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/: InsightBoard_Condensed_Project_Spec.md
.github/instructions/: InsightBoard_Condensed_Project_Spec.md  Insightboard_Condensed_spec.instructions.md
Documentation/: BACKEND_ARCHITECTURE.md  BACKEND_VERIFICATION.md  FRONTEND_ARCHITECTURE.md  INFRASTRUCTURE_SETUP.md  PHASE_10_STYLING_SUMMARY.md
backend/: Cargo.toml
backend/migrations/: 001_create_users.sql  002_create_dashboards.sql
backend/src/: auth.rs  cache.rs  config.rs  db.rs  error.rs  main.rs
backend/src/handlers/: auth.rs  dashboard.rs  health.rs  mod.rs
backend/src/models/: dashboard.rs  mod.rs  user.rs
backend/src/widgets/: crypto.rs  github.rs  mod.rs  news.rs  status.rs  weather.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: auth.ts  client.ts  dashboard.ts  index.ts  widgets.ts
frontend/src/components/: BaseWidget.vue  WidgetConfigModal.vue
frontend/src/components/widgets/: CryptoWidget.vue  GitHubWidget.vue  NewsWidget.vue  StatusWidget.vue  WeatherWidget.vue
frontend/src/composables/: widgetRegistry.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  dashboard.ts  widgets.ts
frontend/src/types/: index.ts
frontend/src/views/: DashboardEditorView.vue  DashboardListView.vue  LoginView.vue  RegisterView.vue
