[package]
name = "insightboard-backend"
version = "0.1.0"
edition = "2021"
authors = ["InsightBoard Team"]
description = "A modular, cloud-native dashboard backend built with Rust and Axum"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Redis cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1"

# Environment variables
dotenvy = "0.15"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Rate limiting
governor = "0.6"

# Configuration
config = "0.14"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
